<?xml version="1.0"?>
<package format="2">
  <name>premaidai_teleoperation</name>
  <version>0.0.0</version>
  <description>The premaidai_teleoperation package</description>
  <maintainer email="takeshi.chiku@gmail.com">chikuta</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
  </export>
</package>
